# picoX-project-template

./: .gitignore  CMakeLists.txt  README.md  do  do_1  do_1w  do_2  do_2w  my_program.c  picoX.sh
